version 2.3.0: wire mappers into generated services